# PEPO

./: README.md
GWO/: GWO.asv  GWO.m  Get_Functions_details.asv  Get_Functions_details.m  deg2raw.m  dothething.m  erro.m  initialization.asv  initialization.m  keypt2.txt  main.asv  main.m  position.m  raw2deg.m
GWO/files/: keypt1.txt  matches.txt  pose.txt
GWOC++/: .gitignore  CMakeLists.txt
GWOC++/benchmark/: fob.cc
GWOC++/include/: argument.hpp  benchmark.hpp  benchmarkFactory.hpp  gwo.hpp  utils.hpp
GWOC++/include/benchmark/: fob.hpp
GWOC++/src/: argument.cc  benchmark.cc  benchmarkFactory.cc  gwo.cc  main.cc  utils.cc
PointCloud_Registration/: PointCloud_Registration.sln
PointCloud_Registration/PointCloud_Registration/: PointCloud_Registration.py  PointCloud_Registration.pyproj  helpfunctions.py
communication/: CMakeLists.txt
fog/: CMakeLists.txt
fog/launch/: acc_obj.launch  acc_space.launch  planta_baixa.launch  record_fog.launch  sfm.launch
fog/resources/: rviz.rviz
fog/src/: acc_obj.cpp  acc_space2.cpp  imagem_virtual.cpp  planta_baixa.cpp  register_total.cpp  sfm_horizontal.cpp
libraries/include/: RANSAC_algo.hpp  homography.hpp  processcloud.h  registerobjectoptm.h  registerspace.h  sfm.h
libraries/src/: bshot_bits.cpp  processcloud.cpp  registerobjectoptm.cpp  registerspace.cpp  sfm.cpp  sfm.cpp.autosave
panoramica_esfera/: CMakeLists.txt  CMakeLists_maria.txt  package.xml
panoramica_esfera/src/: projeta_esfera2.cpp
